--- a/pages/news.html
+++ b/pages/news.html
@@ -44,12 +44,12 @@
     <h2 class="section-title">NEWS</h2>
     <div class="news-container">
       <div class="news-card">
-        <img class="news-img" src="../Assets/news1.jpeg" alt="">
+        <img class="news-img" src="../Assets/news1.png" alt="">
         <h3 class="news-title">Beyond the Battlefield: A Moment of Peace for Valorant's Agents</h3>
         <p class="news-desc">Amidst the chaos of battle and the relentless sound of gunfire, there are rare moments when the agents of Valorant can set their weapons aside, take a deep breath, and savor the world they fight to protect. Under the golden sun of a bustling seaside town, five agents gather—not to strategize, not to hunt their enemies, but to simply enjoy a fleeting moment of peace.</p>
       </div>
       <div class="news-card">
-        <img class="news-img" src="../Assets/update8.jpeg" alt="">
+        <img class="news-img" src="../Assets/update8.png" alt="">
         <h3 class="news-title">The Calm Before the Storm : Assemble</h3>
         <p class="news-desc">They have been here before. Different battlefields, different enemies, but the same unrelenting fight. Some adjust their gear, others exchange glances—silent acknowledgments of what is to come. There are no speeches, no words of encouragement. They don't need them. Every agent here knows their purpose, their role in the chaos about to unfold. They've trained for this, bled for this, and now it's their moment to rise once more.</p>
   </section>
@@ -58,7 +58,7 @@
     <h2 class="section-title">UPDATE</h2>
     <div class="news-container">
       <div class="news-card">
-        <img class="news-img" src="../Assets/UPDATE10.jpeg" alt="">
+        <img class="news-img" src="../Assets/UPDATE10.png" alt="">
         <h3 class="news-title">VALORANT PATCH 8.04</h3>
         <p class="news-desc">Patch 8.04 brings a series of adjustments to agents, weapons, and gameplay, aiming to refine the competitive experience while keeping things fresh for players.</p>
       </div>
